fix: overflow visible

--- a/src/callout-extras.scss
+++ b/src/callout-extras.scss
@@ -44,7 +44,7 @@ body{
         box-shadow: none;
         max-width: 100%;
         background-color: var(--callout-background-color);
-        overflow-y: visible;
+        overflow: visible;
     }
 }
 
